<resources>
    <string name="app_name">My Smart Home</string>
    <string name="profile">Profile</string>
    <string name="position_roller_shutter">"Position: "</string>
    <string name="preferences">Preferences</string>
    <string name="address_title">Address</string>
    <string name="birthdate">Birthdate</string>
    <string name="name">Name</string>
    <string name="user_name" translatable="false">"%1$s %2$s"</string>
    <string name="address" translatable="false">%1$s %2$s %3$s %4$s %5$s</string>
    <string name="dark_mode">Dark mode</string>
    <integer name="max_value_heater">28</integer>
    <integer name="min_value_heater">7</integer>
    <integer name="max_value_light">100</integer>
    <integer name="min_value_light">0</integer>
    <integer name="max_value_roller_shutter">100</integer>
    <integer name="min_value_roller_shutter">1</integer>


    <string name="save">Save</string>
    <string name="first_name_title">First name</string>
    <string name="last_name_title">Last name</string>
    <string name="edit_name_title">Edit your name</string>
    <string name="edit_address_title">Edit your address</string>
    <string name="street_number_title">Street number</string>
    <string name="street_title">Street</string>
    <string name="postal_code_title">Postal code</string>
    <string name="city_title">City</string>
    <string name="country_title">Country</string>
    <string name="empty_field">This field cannot be empty</string>
    <string name="intensity_title">"Intensity: "</string>
    <string name="percentage_symbol" translatable="false">%</string>
    <string name="device_mode_title">Mode</string>
    <string name="temperature_title">"Temperature: "</string>
    <string name="degree_symbol" translatable="false">°</string>
    <string name="device_icon">Device Icon</string>
    <string name="my_devices">My devices</string>
    <string name="lights_title">LIGHTS</string>
    <string name="heaters_title">HEATERS</string>
    <string name="roller_shutters_title_filter">ROLLER SHUTTERS</string>
    <string name="heater_icon">Heater icon</string>
    <string name="roller_shutter_title">Roller shutters</string>
    <string name="bulb_icon">Bulb icon</string>
    <string name="roller_shutter_icon">Roller shutter icon</string>
    <string name="identity_card_icon">Identity card icon</string>
    <string name="calendar_icon">Calendar icon</string>
    <string name="location_home_icon">Location home icon</string>
    <string name="profile_icon">Profil icon</string>
    <string name="cancel_filter_button">Cancel filter button</string>
    <string name="delete">Delete</string>
    <string name="confirm_deletion">Confirm deletion?</string>
    <string name="light_title">Light</string>
    <string name="heater_title">Heater</string>
    <string name="undo_delete">Undo</string>
    <string name="deleting_device">Deleting…</string>
    <integer name="max_value_rollershutter">100</integer>
    <integer name="min_value_rollershutter">0</integer>
</resources>