<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/device_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_item_device_list"
        android:layout_marginBottom="@dimen/margin_icon_bottom"
        android:layout_marginEnd="@dimen/margin_item_device_list"
        android:layout_marginTop="@dimen/margin_item_device_list"
        app:cardCornerRadius="@dimen/corner_radius_cardview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color_item_list">


            <ImageView
                android:id="@+id/device_icon"
                android:layout_width="@dimen/list_device_ic_size"
                android:layout_height="@dimen/list_device_ic_size"
                android:layout_margin="20dp"
                android:contentDescription="@string/device_icon"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/icon_color"
                tools:src="@drawable/ic_smart_bulb" />

            <TextView
                android:id="@+id/deviceText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_text"
                android:textAppearance="@style/PreferencesTitleTextAppearance"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/device_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2"
                tools:text="Light" />

            <LinearLayout
                android:id="@+id/device_mode_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_subtext_device_list"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="@+id/deviceText"
                app:layout_constraintTop_toBottomOf="@+id/deviceText">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_mode_title"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <TextView
                    android:id="@+id/device_mode_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/subtext_value"
                    tools:text="OFF" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/position_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_subtext_device_list"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/deviceText"
                app:layout_constraintTop_toBottomOf="@+id/deviceText">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/position_roller_shutter"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <TextView
                    android:id="@+id/position_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/subtext_value"
                    tools:text="70" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/subtext_value"
                    android:text="@string/percentage_symbol" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>